--- a/WebGentle.BookStore/WebGentle.BookStore/Views/Home/Index.cshtml
+++ b/WebGentle.BookStore/WebGentle.BookStore/Views/Home/Index.cshtml
@@ -7,11 +7,25 @@
 
 <!DOCTYPE html>
 <html>
-    <head>
-        <meta name="viewport" content="width=device-width" />
-        <title>Index</title>
-    </head>
-    <body>
+<head>
+    <meta name="viewport" content="width=device-width" />
+    <title>Index</title>
+    <link href="~/lib/twitter-bootstrap/css/bootstrap.css" rel="stylesheet" />
+    <link href="~/css/Site.css" rel="stylesheet" />
+</head>
+    <body class="container">
+        <img src="~/images/logo.jpg" class="logo" alt="logo" />
+
+
         <h1>Welcome to book store application</h1>
+
+
     </body>
+    <script src="~/lib/jquery/jquery.js"></script>
 </html>
+
+<script>
+    $(document).ready(function () {
+        alert("Page loaded");
+    });
+</script>
