Sections added in the view.

--- a/WebGentle.BookStore/WebGentle.BookStore/Views/Home/Index.cshtml
+++ b/WebGentle.BookStore/WebGentle.BookStore/Views/Home/Index.cshtml
@@ -5,6 +5,15 @@
     Layout = "_Layout";
 }
 
+@section breadcrumb {
+    <nav aria-label="breadcrumb">
+        <ol class="breadcrumb">
+            <li class="breadcrumb-item"><a href="#">Home</a></li>
+            <li class="breadcrumb-item"><a href="#">Page 1</a></li>
+            <li class="breadcrumb-item active" aria-current="page">Index</li>
+        </ol>
+    </nav>
+}
 
 <section class="jumbotron text-center">
     <div class="container">
@@ -73,3 +82,13 @@
         </div>
     </div>
 </div>
+
+
+
+@section scripts {
+    <script>
+        $(document).ready(function () {
+            //alert("document is ready");
+        });
+    </script>
+}
