--- a/WebGentle.BookStore/WebGentle.BookStore/Views/Home/ContactUs.cshtml
+++ b/WebGentle.BookStore/WebGentle.BookStore/Views/Home/ContactUs.cshtml
@@ -5,4 +5,14 @@
     Layout = "_Layout";
 }
 
+@section breadcrumb {
+    <nav aria-label="breadcrumb">
+        <ol class="breadcrumb">
+            <li class="breadcrumb-item"><a href="#">Home</a></li>
+            <li class="breadcrumb-item"><a href="#">Page 1</a></li>
+            <li class="breadcrumb-item active" aria-current="page">Contact us</li>
+        </ol>
+    </nav>
+}
+
 <h1>Hello from contact us page</h1>
