--- a/WebGentle.BookStore/WebGentle.BookStore/Views/Shared/_Layout.cshtml
+++ b/WebGentle.BookStore/WebGentle.BookStore/Views/Shared/_Layout.cshtml
@@ -8,8 +8,60 @@
     <link href="~/css/Site.css" rel="stylesheet" />
 </head>
 <body>
+    <header>
+        <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
+            <div class="container">
+                <a class="navbar-brand" href="/">
+                    <img src="~/images/logo.jpg" width="30" height="30" />
+                    Book store
+                </a>
+                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".navbar-collapse" aria-controls="navbarSupportedContent"
+                        aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="navbar-collapse collapse d-sm-inline-flex flex-sm-row-reverse">
+                    <ul class="navbar-nav">
+                        <li class="nav-item">
+                            <a class="btn btn-outline-primary">Login</a>
+                            <a class="btn btn-primary">Register</a>
+                        </li>
+                    </ul>
+                    <ul class="navbar-nav flex-grow-1">
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" href="/">Home</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" href="/home/aboutus">About</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" href="/home/contactus">Contact</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" href="/book/getallbooks">All Books</a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </nav>
+    </header>
+    @RenderSection("breadcrumb", required:false)
+    <nav aria-label="breadcrumb">
+        <ol class="breadcrumb">
+            <li class="breadcrumb-item"><a href="#">Home</a></li>
+            <li class="breadcrumb-item"><a href="#">Page 1</a></li>
+            <li class="breadcrumb-item active" aria-current="page">Page 2</li>
+        </ol>
+    </nav>
     <main role="main">
         @RenderBody()
     </main>
+    <footer class="footer border-top card-footer text-muted text-center">
+        <div class="container">
+            Copyright &copy; Book Store @DateTime.Now.Year
+        </div>
+    </footer>
+    <script src="~/lib/jquery/jquery.js"></script>
+
+    @RenderSection("scripts", required:false)
 </body>
 </html>
