--- a/WebGentle.BookStore/WebGentle.BookStore/Views/Book/GetAllBooks.cshtml
+++ b/WebGentle.BookStore/WebGentle.BookStore/Views/Book/GetAllBooks.cshtml
@@ -3,10 +3,6 @@
 *@
 @using WebGentle.BookStore.Models
 @model IEnumerable<BookModel>
-@{
-    Layout = "_Layout";
-}
-
 
 <div class="container">
     <h3>All books</h3>
@@ -23,7 +19,7 @@
                         <p class="card-text">@book.Description</p>
                         <div class="d-flex justify-content-between align-items-center">
                             <div class="btn-group">
-                                <a href="#" class="btn btn-sm btn-outline-secondary">View details</a>
+                                <a href="/book/getbook/@book.Id" class="btn btn-sm btn-outline-secondary">View details</a>
                             </div>
                             <small class="text-muted">@book.Author</small>
                         </div>
