Details of book from database.

--- a/WebGentle.BookStore/WebGentle.BookStore/Views/Home/Index.cshtml
+++ b/WebGentle.BookStore/WebGentle.BookStore/Views/Home/Index.cshtml
@@ -2,7 +2,7 @@
     For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
 *@
 
-@section breadcrumb {
+@*@section breadcrumb {
     <nav aria-label="breadcrumb">
         <ol class="breadcrumb">
             <li class="breadcrumb-item"><a href="#">Home</a></li>
@@ -10,11 +10,24 @@
             <li class="breadcrumb-item active" aria-current="page">Index</li>
         </ol>
     </nav>
-}
+}*@
+
+@*@{ 
+    ViewData["Title"] = "Home";
+}*@
 
 <section class="jumbotron text-center">
     <div class="container">
-        <h1>Welcome to Bookstore</h1>
+        <h1>Welcome to Bookstore @ViewData["CustomProperty"]</h1>
+
+        <environment names="Development">
+            <h3>Development</h3>
+        </environment>
+
+        <environment names="Production">
+            <h3>Production</h3>
+        </environment>
+
         <p class="lead text-muted">
             Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
         </p>
