--- a/WebGentle.BookStore/WebGentle.BookStore/Views/Book/GetAllBooks.cshtml
+++ b/WebGentle.BookStore/WebGentle.BookStore/Views/Book/GetAllBooks.cshtml
@@ -1,7 +1,10 @@
 ﻿@*
     For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
 *@
-@using WebGentle.BookStore.Models
+@{
+    ViewData["Title"] = "All Books";
+}
+
 @model IEnumerable<BookModel>
 
 <div class="container">
@@ -19,7 +22,7 @@
                         <p class="card-text">@book.Description</p>
                         <div class="d-flex justify-content-between align-items-center">
                             <div class="btn-group">
-                                <a href="/book/getbook/@book.Id" class="btn btn-sm btn-outline-secondary">View details</a>
+                                <a asp-controller="book" asp-action="getbook" asp-route-id="@book.Id" class="btn btn-sm btn-outline-secondary">View details</a>
                             </div>
                             <small class="text-muted">@book.Author</small>
                         </div>
@@ -27,7 +30,5 @@
                 </div>
             </div>
         }
-
-
     </div>
 </div>
