--- a/WebGentle.BookStore/WebGentle.BookStore/Views/Book/GetBook.cshtml
+++ b/WebGentle.BookStore/WebGentle.BookStore/Views/Book/GetBook.cshtml
@@ -1,4 +1,6 @@
-﻿@using WebGentle.BookStore.Models;
+﻿@{
+    ViewData["Title"] = "Book detail " + Model.Title;
+}
 @model BookModel;
 
 <div class="container">
@@ -67,7 +69,7 @@
         </div>
     </div>
     <hr />
-    <div class="py-5 bg-light">
+    <div class="py-5 bg-light" id="similarBooks">
         <h3 class="h3">Similar books</h3>
         <div class="row">
             @for (int i = 0; i < 5; i++)
