--- a/WebGentle.BookStore/WebGentle.BookStore/Views/Home/AboutUs.cshtml
+++ b/WebGentle.BookStore/WebGentle.BookStore/Views/Home/AboutUs.cshtml
@@ -2,14 +2,18 @@
     For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
 *@
 
-@section breadcrumb {
-    <nav aria-label="breadcrumb">
-        <ol class="breadcrumb">
-            <li class="breadcrumb-item"><a href="#">Home</a></li>
-            <li class="breadcrumb-item"><a href="#">Page 1</a></li>
-            <li class="breadcrumb-item active" aria-current="page">About us</li>
-        </ol>
-    </nav>
-}
+@*@section breadcrumb {
+        <nav aria-label="breadcrumb">
+            <ol class="breadcrumb">
+                <li class="breadcrumb-item"><a href="#">Home</a></li>
+                <li class="breadcrumb-item"><a href="#">Page 1</a></li>
+                <li class="breadcrumb-item active" aria-current="page">About us</li>
+            </ol>
+        </nav>
+    }*@
+
+@*@{
+    ViewData["Title"] = "About us";
+}*@
 
 <h1>This is the about page of the application</h1>
