--- a/WebGentle.BookStore/WebGentle.BookStore/wwwroot/css/Site.css
+++ b/WebGentle.BookStore/WebGentle.BookStore/wwwroot/css/Site.css
@@ -19,6 +19,22 @@ button.accept-policy {
     line-height: inherit;
 }
 
+a.navbar-brand {
+    white-space: normal;
+    text-align: center;
+    word-break: break-all;
+}
+
+a {
+    color: #0366d6;
+}
+
+.nav-pills .nav-link.active, .nav-pills .show > .nav-link {
+    color: #fff;
+    background-color: #1b6ec2;
+    border-color: #1861ac;
+}
+
 /* Sticky footer styles
 ------------------------------------------- */
 
