--- a/WebGentle.BookStore/WebGentle.BookStore/Views/Book/GetBook.cshtml
+++ b/WebGentle.BookStore/WebGentle.BookStore/Views/Book/GetBook.cshtml
@@ -9,20 +9,22 @@
         <div class="col-md-6">
             <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
                 <ol class="carousel-indicators">
-                    <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
-                    <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
-                    <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+                    
+                    @for(int i = 0; i < Model.Gallery.Count(); i++) 
+                    { 
+                        <li data-target="#carouselExampleIndicators" data-slide-to="@i" 
+                            class="@(i == 0 ? "active" : "" )"></li>
+                    }
+                    
                 </ol>
                 <div class="carousel-inner">
-                    <div class="carousel-item active">
-                        <img src="~/images/book/book1.png" class="d-block w-100" alt="First slide">
-                    </div>
-                    <div class="carousel-item">
-                        <img src="~/images/book/book2.png" class="d-block w-100" alt="Second slide">
-                    </div>
-                    <div class="carousel-item">
-                        <img src="~/images/book/book3.png" class="d-block w-100" alt="Third slide">
-                    </div>
+                    @for (int i = 0; i < Model.Gallery.Count(); i++)
+                    {
+                        <div class="@(i == 0 ? "carousel-item active" : "carousel-item" )">
+                            <img src="@Model.Gallery[i].URL" class="d-block w-100" 
+                                 alt="@Model.Gallery[i].Name">
+                        </div>
+                    }
                 </div>
                 <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
                     <span class="carousel-control-prev-icon" aria-hidden="true"></span>
