--- a/WebGentle.BookStore/WebGentle.BookStore/Views/Book/AddNewBook.cshtml
+++ b/WebGentle.BookStore/WebGentle.BookStore/Views/Book/AddNewBook.cshtml
@@ -75,7 +75,7 @@
             <input asp-for="CoverPhoto" type="file" class="custom-file-input" id="customFile">
             <label class="custom-file-label" for="customFile">Choose file</label>
         </div>
-        <span asp-validation-for="Title" class="text-danger"></span>
+        <span asp-validation-for="CoverPhoto" class="text-danger"></span>
     </div>
     <div class="from-group">
         <label asp-for="GalleryFiles"></label>
@@ -83,9 +83,16 @@
             <input asp-for="GalleryFiles" class="custom-file-input" id="customFiles">
             <label class="custom-file-label" for="customFiles">Choose files</label>
         </div>
-        <span asp-validation-for="Title" class="text-danger"></span>
+        <span asp-validation-for="GalleryFiles" class="text-danger"></span>
     </div>
-
+    <div class="from-group">
+        <label asp-for="BookPdf"></label>
+        <div class="custom-file">
+            <input asp-for="BookPdf" type="file" class="custom-file-input" id="customFile">
+            <label class="custom-file-label" for="customFile">Choose file</label>
+        </div>
+        <span asp-validation-for="BookPdf" class="text-danger"></span>
+    </div>
     <div class="from-group">
         <input type="submit" value="Add book" class="btn btn-primary">
     </div>
