--- a/WebGentle.BookStore/WebGentle.BookStore/Views/Book/GetBook.cshtml
+++ b/WebGentle.BookStore/WebGentle.BookStore/Views/Book/GetBook.cshtml
@@ -9,19 +9,19 @@
         <div class="col-md-6">
             <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
                 <ol class="carousel-indicators">
-                    
-                    @for(int i = 0; i < Model.Gallery.Count(); i++) 
-                    { 
-                        <li data-target="#carouselExampleIndicators" data-slide-to="@i" 
+
+                    @for (int i = 0; i < Model.Gallery.Count(); i++)
+                    {
+                        <li data-target="#carouselExampleIndicators" data-slide-to="@i"
                             class="@(i == 0 ? "active" : "" )"></li>
                     }
-                    
+
                 </ol>
                 <div class="carousel-inner">
                     @for (int i = 0; i < Model.Gallery.Count(); i++)
                     {
                         <div class="@(i == 0 ? "carousel-item active" : "carousel-item" )">
-                            <img src="@Model.Gallery[i].URL" class="d-block w-100" 
+                            <img src="@Model.Gallery[i].URL" class="d-block w-100"
                                  alt="@Model.Gallery[i].Name">
                         </div>
                     }
@@ -57,7 +57,10 @@
             </div>
             <div class="row">
                 <div class="col-md-4">
-                    <button class="btn btn-outline-primary">Read now</button>
+                    <a class="btn btn-outline-primary" data-toggle="modal" 
+                        data-target="#exampleModal">
+                        Read now
+                    </a>
                 </div>
             </div>
 
@@ -70,6 +73,27 @@
             </ul>
         </div>
     </div>
+
+    <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+        <div class="modal-dialog modal-lg" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
+                </div>
+                <div class="modal-body">
+                    @*<embed src="@Model.BookPdfUrl" class="w-100"/>*@
+                    <iframe src="@Model.BookPdfUrl" class="w-100"></iframe>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                    <button type="button" class="btn btn-primary">Save changes</button>
+                </div>
+            </div>
+        </div>
+    </div>
+
     <hr />
     <div class="py-5 bg-light" id="similarBooks">
         <h3 class="h3">Similar books</h3>
