--- a/WebGentle.BookStore/WebGentle.BookStore/Views/Home/Index.cshtml
+++ b/WebGentle.BookStore/WebGentle.BookStore/Views/Home/Index.cshtml
@@ -44,52 +44,18 @@
         <p big>Top book using attribute</p>
         <div class="row">
             <div class="col-md-4">
-                <div class="card mb-4 shadow-sm">
-                    <svg class="bd-placeholder-img card-img-top" width="100%" height="225" xmlns="http://www.w3.org/2000/svg">
-
-                    </svg>
-                    <div class="card-body">
-                        <p class="card-text">This section will be used to display the short description of the book</p>
-                        <div class="d-flex justify-content-between align-items-center">
-                            <div class="btn-group">
-                                <a href="#" class="btn btn-sm btn-outline-secondary">View details</a>
-                            </div>
-                            <small class="text-muted">Author name</small>
-                        </div>
-                    </div>
-                </div>
+                @*<partial name="_bookThumbnail" model="new BookModel()"/>*@
+                @Html.Partial("_bookThumbnail", new BookModel())
             </div>
             <div class="col-md-4">
-                <div class="card mb-4 shadow-sm">
-                    <svg class="bd-placeholder-img card-img-top" width="100%" height="225" xmlns="http://www.w3.org/2000/svg">
-
-                    </svg>
-                    <div class="card-body">
-                        <p class="card-text">This section will be used to display the short description of the book</p>
-                        <div class="d-flex justify-content-between align-items-center">
-                            <div class="btn-group">
-                                <a href="#" class="btn btn-sm btn-outline-secondary">View details</a>
-                            </div>
-                            <small class="text-muted">Author name</small>
-                        </div>
-                    </div>
-                </div>
+                @*<partial name="_bookThumbnail" model="new BookModel()" />*@
+                @await Html.PartialAsync("_bookThumbnail", new BookModel())
             </div>
             <div class="col-md-4">
-                <div class="card mb-4 shadow-sm">
-                    <svg class="bd-placeholder-img card-img-top" width="100%" height="225" xmlns="http://www.w3.org/2000/svg">
-
-                    </svg>
-                    <div class="card-body">
-                        <p class="card-text">This section will be used to display the short description of the book</p>
-                        <div class="d-flex justify-content-between align-items-center">
-                            <div class="btn-group">
-                                <a href="#" class="btn btn-sm btn-outline-secondary">View details</a>
-                            </div>
-                            <small class="text-muted">Author name</small>
-                        </div>
-                    </div>
-                </div>
+                @*<partial name="_bookThumbnail" model="new BookModel()" />*@
+                @{
+                    Html.RenderPartial("_bookThumbnail", new BookModel());
+                }
             </div>
         </div>
     </div>
