--- a/WebGentle.BookStore/WebGentle.BookStore/Views/Home/Index.cshtml
+++ b/WebGentle.BookStore/WebGentle.BookStore/Views/Home/Index.cshtml
@@ -12,9 +12,10 @@
     </nav>
 }*@
 
-@*@{ 
+@{ 
     ViewData["Title"] = "Home";
-}*@
+}
+@inject WebGentle.BookStore.Repository.IBookRepository _bookRepository
 
 <section class="jumbotron text-center">
     <div class="container">
@@ -34,6 +35,11 @@
         <p>
             <a href="" class="btn btn-primary my-2">Search books</a>
         </p>
+
+        @foreach (var item in await _bookRepository.GetAllBooks()) 
+        {
+            <h2>@item.Title</h2>
+        }
     </div>
 </section>
 
