--- a/WebGentle.BookStore/WebGentle.BookStore/Views/Shared/_header.cshtml
+++ b/WebGentle.BookStore/WebGentle.BookStore/Views/Shared/_header.cshtml
@@ -1,10 +1,12 @@
-﻿<header>
+﻿@inject WebGentle.BookStore.Repository.IBookRepository _bookRepository
+
+<header>
     <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
         <div class="container">
             <a class="navbar-brand" href="/">
                 <img src="~/images/logo.jpg" width="30" height="30"
                      asp-append-version="true" />
-                Book store
+                @_bookRepository.GetAppName()
             </a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".navbar-collapse" aria-controls="navbarSupportedContent"
                     aria-expanded="false" aria-label="Toggle navigation">
