--- a/WebGentle.BookStore/WebGentle.BookStore/Views/Shared/_header.cshtml
+++ b/WebGentle.BookStore/WebGentle.BookStore/Views/Shared/_header.cshtml
@@ -1,4 +1,4 @@
-﻿@inject WebGentle.BookStore.Repository.IBookRepository _bookRepository
+﻿@inject Microsoft.Extensions.Configuration.IConfiguration _configuration
 
 <header>
     <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
@@ -6,7 +6,7 @@
             <a class="navbar-brand" href="/">
                 <img src="~/images/logo.jpg" width="30" height="30"
                      asp-append-version="true" />
-                @_bookRepository.GetAppName()
+                @_configuration["AppName"]
             </a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".navbar-collapse" aria-controls="navbarSupportedContent"
                     aria-expanded="false" aria-label="Toggle navigation">
