--- a/WebGentle.BookStore/WebGentle.BookStore/Views/Shared/_header.cshtml
+++ b/WebGentle.BookStore/WebGentle.BookStore/Views/Shared/_header.cshtml
@@ -1,4 +1,10 @@
-﻿@inject Microsoft.Extensions.Configuration.IConfiguration _configuration
+﻿@using Microsoft.Extensions.Configuration
+@inject IConfiguration _configuration
+@inject Microsoft.Extensions.Options.IOptionsSnapshot<NewBookAlertConfig> _newBookAlertconfiguration
+@{
+    var newBookAlertconfiguration = _newBookAlertconfiguration.Get("InternalBook");
+    var thirdPartyBookAlertconfiguration = _newBookAlertconfiguration.Get("ThirdPartyBook");
+}
 
 <header>
     <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
@@ -14,10 +20,7 @@
             </button>
             <div class="navbar-collapse collapse d-sm-inline-flex flex-sm-row-reverse">
                 <ul class="navbar-nav">
-                    <li class="nav-item">
-                        <a class="btn btn-outline-primary">Login</a>
-                        <a class="btn btn-primary">Register</a>
-                    </li>
+                    <partial name="_Logininfo" />
                 </ul>
                 <ul class="navbar-nav flex-grow-1">
                     <li class="nav-item">
@@ -39,4 +42,19 @@
             </div>
         </div>
     </nav>
+
+    @if (newBookAlertconfiguration.DisplayNewBookAlert)
+    {
+        <div class="alert alert-info" role="alert">
+            @(newBookAlertconfiguration.BookName)
+        </div>
+    }
+
+    @if (thirdPartyBookAlertconfiguration.DisplayNewBookAlert)
+    {
+        <div class="alert alert-info" role="alert">
+            @(thirdPartyBookAlertconfiguration.BookName)
+        </div>
+    }
+
 </header>
