Check if user is logged in.

--- a/WebGentle.BookStore/WebGentle.BookStore/Views/Account/Login.cshtml
+++ b/WebGentle.BookStore/WebGentle.BookStore/Views/Account/Login.cshtml
@@ -27,11 +27,11 @@
 </head>
 <body>
     <div class="container">
-        <h4>Sign In Model</h4>
+        <h4>Sign In</h4>
         <hr />
         <div class="row">
             <div class="col-md-4">
-                <form asp-action="Login">
+                <form method="post">
                     <div asp-validation-summary="ModelOnly" class="text-danger"></div>
                     <div class="form-group">
                         <label asp-for="Email" class="control-label"></label>
