--- a/WebGentle.BookStore/WebGentle.BookStore/Views/Shared/_LoginInfo.cshtml
+++ b/WebGentle.BookStore/WebGentle.BookStore/Views/Shared/_LoginInfo.cshtml
@@ -5,8 +5,8 @@
 {
     <li class="nav-item dropdown">
         <a class="nav-link dropdown-toggle text-dark" href="#" id="navbarDropdown" role="button"
-           data-toggle="dropdown" aria-haspopup="true" aria-haspopup="true" aria-expanded="false">
-            Hello @User.Identity.Name
+           data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            Hello @(User.FindFirst("UserFirstName").Value + " " + User.FindFirst("UserLastName").Value)
         </a>
         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
             <a class="dropdown-item" asp-action="Logout" asp-controller="Account">Logout</a>
@@ -17,7 +17,8 @@
 else
 {
     <li class="nav-item">
-        <a class="btn btn-outline-primary" asp-controller="Account" asp-action="Login">Login</a>
+        <a class="btn btn-outline-primary" asp-controller="Account" asp-action="Login"
+           asp-route-returnUrl="@Context.Request.Path">Login</a>
         <a class="btn btn-primary" asp-controller="Account" asp-action="Signup">Register</a>
     </li>
 }
